# refresh-backoffice

./: .flaskenv  .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  config.py  create_admin.py  extensions.py  models.py  move_to_archive.py  pyproject.toml  requirements.txt  routes.py  setup.py  test_server.py
models/: __init__.py  admin.py  email_template.py  member.py  visitor.py
routes/: __init__.py  admin_routes.py  main_routes.py  member_routes.py
services/: breeze_service.py  email_service.py
src/: __init__.py  config.py  routes.py
src/admin/: dashboard.html  database.html  edit_template.html  login.html  planned_visits.html  setup.html  templates.html
src/components/forms/: forms.py
src/core/: __init__.py  extensions.py
src/database/: query.html
src/forms/: auth.py  member.py
src/member/: detail.html  edit.html  list.html
src/members/: detail.html  edit.html  list.html
src/models/: __init__.py
src/scripts/: db_init.py
src/services/: breeze_service.py
src/templates/: base.html  error.html  index.html  visit_form.html
static/css/: dashboard.css  styles.css
static/js/: form.js  member-list.js  member-sync.js  validation.js
templates/: base.html  visit_form.html
templates/admin/: dashboard.html  login.html  planned_visits.html  templates.html  test.html
templates/email/: staff_notification.html  visitor_confirmation.html
templates/member/: detail.html  edit.html  list.html
templates/members/: detail.html  edit.html  list.html
tests/unit/: test_db.py  test_mapping.py  test_sync.py
utils/: cache.py
(+11 files in other folders)
