[project]
name = "repl-nix-refresh-church-visit-planner"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-mail>=0.10.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "psycopg2-binary>=2.9.10",
    "wtforms>=3.2.1",
    "sendgrid>=6.11.0",
    "werkzeug",
    "requests>=2.32.3",
    "flask-login>=0.6.3",
    "python-dotenv>=1.0.1",
]
